ibuilder/tests/not_compile/hidden_no_default.stderr
error: a default value is required for hidden fields
 --> $DIR/hidden_no_default.rs:5:5
  |
5 | /     #[ibuilder(hidden)]
6 | |     field: i64,
  | |______________^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
  --> $DIR/hidden_no_default.rs:10:10
   |
4  | struct Foo {
   | ---------- function or associated item `builder` not found for this
...
10 |     Foo::builder();
   |          ^^^^^^^ function or associated item not found in `Foo`
   |
   = note: the method `builder` exists but the following trait bounds were not satisfied:
           `&Foo : ibuilder::Buildable<_>`
           `&mut Foo : ibuilder::Buildable<_>`
           `Foo : ibuilder::Buildable<_>`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `builder`, perhaps you need to implement it:
           candidate #1: `ibuilder::Buildable`
